--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;800;900&family=Inter:wght@300;500;600;800;900&display=swap');
