--- a/src/custom-styles.css
+++ b/src/custom-styles.css
@@ -30,3 +30,17 @@
     width: 270px !important;
   }
 }
+
+/* !!!!!!! Testimonial Slider !!!!!!!! */
+.testimonial-rating-stars > span {
+  font-size: 60px !important;
+}
+@media only screen and (max-width: 768px) {
+  .testimonial-rating-stars > span {
+    font-size: 20px !important;
+  }
+  .swiper-button-next:after,
+  .swiper-button-prev:after {
+    font-size: 20px !important;
+  }
+}
