Delete item from cart

--- a/src/custom-styles.css
+++ b/src/custom-styles.css
@@ -57,3 +57,8 @@
 .dashboard-navbar > a.active{
   color: white;
 }
+
+/* !!!!!!! Sweet alert !!!!!!!! */
+.swal2-styled.swal2-confirm{
+  background-color: #d1a054!important;
+}
