--- a/src/custom-styles.css
+++ b/src/custom-styles.css
@@ -62,3 +62,9 @@
 .swal2-styled.swal2-confirm{
   background-color: #d1a054!important;
 }
+
+/* !!!!!!! Add item form glass background style !!!!!!!! */
+.add-items > .glass{
+  backdrop-filter: blur(var(--glass-blur, 2px)) !important;
+  background-color: #73737375 !important;
+}
