--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,14 @@
 @tailwind utilities;
 
 /* !!!!!!!!!!! Custom CSS components !!!!!!!!!!!!!!! */
-
+body {
+  background-color: #e9f0f6;
+}
 @layer components {
-    .dashboard-card {
-        @apply px-6 py-10 rounded-lg w-full text-4xl font-black flex gap-4 items-start justify-center text-white
-    }
-    .dashboard-loading-card {
-        @apply text-center px-6 py-10 rounded-lg w-full text-2xl font-black text-white
-    }
+  .dashboard-card {
+    @apply px-6 py-10 rounded-lg w-full text-4xl font-black flex gap-4 items-start justify-center text-white;
+  }
+  .dashboard-loading-card {
+    @apply text-center px-6 py-10 rounded-lg w-full text-2xl font-black text-white;
+  }
 }
